# cookiecutter-fastapi-ml

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml  requirements_dev.txt
app/: config.py  main.py
app/api/: health.py  main_router.py  models_manager.py
app/api/ml/: models-info.py  models_info.py  routes.py
scripts/: code-fmt.sh  code-linters.sh  docker-run.sh  download-ml-models.sh  fmt.sh  serve-app.sh  test-app.sh  tests.sh
tests/: test_health.py
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/app/: .env.example  config.py  ml-models.json
{{cookiecutter.project_slug}}/app/api/ml/: models_info.py  models_manager.py  routes.py
{{cookiecutter.project_slug}}/app/ml-models/: .gitkeep
{{cookiecutter.project_slug}}/app/models/: health.py
{{cookiecutter.project_slug}}/scripts/: docker-build.sh  docker-run.sh  download-ml-models.sh  install-poetry.sh  serve-app.sh
{{cookiecutter.project_slug}}/tests/: test_health.py
