# ---
# Poetry stuff
[tool.poetry]
name = "cookiecutter-fastapi-ml"
version = "0.1.0"
description = "cookiecutter FastAPI back-end ML oriented"
authors = ["cookiecutter-pistocop"]

[tool.poetry.dependencies]
python = "3.8.0"
fastapi = "^0.75.0"
requests = "^2.27.1"
uvicorn = "^0.17.6"
loguru = "^0.6.0"
python-dotenv = "^0.20.0"
setuptools = "^61.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"