# ---
# Poetry stuff
[tool.poetry]
name = "cookiecutter-fastapi-ml"
version = "0.1.0"
description = "cookiecutter FastAPI back-end ML oriented"
authors = ["pistocop <hey@pistocop.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.0"
fastapi = "^0.75.0"
requests = "^2.27.1"
uvicorn = "^0.17.6"
loguru = "^0.6.0"
python-dotenv = "^0.20.0"
setuptools = "^61.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette", "mypy"]

[tool.mypy]
# available settings: https://mypy.readthedocs.io/en/latest/config_file.html
python_version = 3.8
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false